--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,24 @@ footer address {
     margin: 0px;
     color: #fff;
 }
+
+.col-12.col-sm-6.col-md-6 {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.col-12.col-sm-12.col-md-12 {
+    margin-bottom: 100px;
+}
+
+.form {
+    width: 68%;
+}
+
+input[type="radio"] {
+    margin-left: 25px;
+}
+
+.form-group {
+    margin-top: 20px;
+}
